# computer-aided-analysis-Cmake_template

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  Matrix_Utils.h  paths.h.in
modules/: CMakeLists.txt  paths.F90.in
results/HW1/: prob1_c.gnu  prob1_f.gnu
results/HW2/: prob3.gnu
results/HW3/: prob2.gnu  prob4.gnu
src/: CMakeLists.txt  MAIN_GESS.c  eig_test.c
